[package]
name = "tlg_rs"
categories = ["command-line-utilities", "image"]
description="Convert to and from tlg images"
readme = "README.org"
version = "0.2.0"
authors = ["forlos <forlos@disroot.org>"]
homepage = "https://github.com/forlos/tlg_rs"
repository = "https://github.com/forlos/tlg_rs"
edition = "2018"

[dependencies]
scroll = { version = "0.10", features = ["derive"] }
image = { version = "0.23", default_features = false, features = ["png"] }
lazy_static = "1.4"
byteorder = { version = "1.3", default_features = false }
structopt = { version = "0.3", default_features = false }
rayon = { version = "1.3", default_features = false }
indicatif = { version = "0.15" , features = ["with_rayon"]}
anyhow = "1.0"
thiserror = "1.0"

[profile.dev]
opt-level = 1
